@@ -19,7 +19,7 @@
 
 		<field name="articletext" type="editor" class="inputbox"
 			label="COM_CONTENT_FIELD_ARTICLETEXT_LABEL" description="COM_CONTENT_FIELD_ARTICLETEXT_DESC"
-			filter="safehtml" buttons="true" />
+			filter="safehtml" buttons="true" hide="false" />
 
 		<field name="state" type="list" label="JGLOBAL_STATE"
 			description="JFIELD_PUBLISHED_DESC" class="inputbox"
