@@ -28,6 +28,7 @@ $ -> Language fix or change
 ! -> Note
 
 10-May-2010 Jean-Marie Simonet
+# Enabling editors-xtd buttons in com_content
 ^ Hathor's views (20384]
 ^ Hathor's mod_status params [20385]
 $ Adding missing string
